[package]
name = "wallhaven_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
reqwest = { version = "0.10", features = ["json", "blocking"] }
rand = "0.7.2"
image = "0.24.1"
wallpaper = "3.2.0"
